frontend/k8s/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: default
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dnsarc-frontend-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - dnsarc.com
      secretName: dnsarc-com-tls
  rules:
    - host: dnsarc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dnsarc-frontend-svc
                port:
                  number: 80
